changed naming convention of project and assembly information added nuget packages

--- a/Repository.UnitTests/Repository.UnitTests.csproj
+++ b/Repository.UnitTests/Repository.UnitTests.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{71707EAE-6333-4392-B761-658025C7E697}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TIRepository.UnitTests</RootNamespace>
+    <RootNamespace>TI.Repository.UnitTests</RootNamespace>
     <AssemblyName>TI.Repository.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -39,7 +39,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\..\WE\WE\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
